--- a/retilla/Base.lproj/LaunchScreen.storyboard
+++ b/retilla/Base.lproj/LaunchScreen.storyboard
@@ -18,25 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test test test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9R-jr-eZx">
-                                <rect key="frame" x="134.5" y="321.5" width="107.5" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sssssss" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="scG-JB-PWS">
-                                <rect key="frame" x="162.5" y="353.5" width="49.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoo_darker" translatesAutoresizingMaskIntoConstraints="NO" id="Yqy-yD-FH2">
+                                <rect key="frame" x="95" y="284.5" width="185" height="98"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="185" id="9IJ-Xn-sDY"/>
+                                    <constraint firstAttribute="height" constant="98" id="eLG-dh-7jm"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.79363751587220865" green="0.95806699816856988" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94331009510813413" green="0.98613496244871257" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="t9R-jr-eZx" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Dk9-s5-A4i"/>
-                            <constraint firstItem="scG-JB-PWS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PrB-nz-MH5"/>
-                            <constraint firstItem="t9R-jr-eZx" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ffV-L8-pcP"/>
-                            <constraint firstItem="scG-JB-PWS" firstAttribute="top" secondItem="t9R-jr-eZx" secondAttribute="bottom" constant="8" id="j8a-4W-ea2"/>
+                            <constraint firstItem="Yqy-yD-FH2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="5XT-uv-bRr"/>
+                            <constraint firstItem="Yqy-yD-FH2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TH1-wm-eIR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -46,4 +39,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logoo_darker" width="510" height="200"/>
+    </resources>
 </document>
